--- a/src/styles/Factura.css
+++ b/src/styles/Factura.css
@@ -25,7 +25,7 @@
 .factura-box h1 {
   text-align: center;
   margin-bottom: 0.5rem;
-  color: #8e24aa;
+  color: #be6600;
 }
 
 .factura-box ul {
@@ -56,12 +56,16 @@
 
 .factura-acciones button {
   padding: 0.6rem 1rem;
-  background-color: #8e24aa;
+  background-color: #be6600;
   color: white;
   border: none;
   border-radius: 6px;
   font-weight: bold;
   cursor: pointer;
+}
+
+.factura-acciones button:hover {
+  background-color: #a0522d;
 }
 
 .factura-box {
